--- a/GreenHouse_VS/GreenHouse_VS.vcxproj.filters
+++ b/GreenHouse_VS/GreenHouse_VS.vcxproj.filters
@@ -17,5 +17,9 @@
   <ItemGroup>
     <None Include="GreenHouse_VS.ino" />
   </ItemGroup>
- 
+  <ItemGroup>
+    <ClInclude Include="__vm\.GreenHouse_VS.vsarduino.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
