--- a/GreenHouse_VS/GreenHouse_VS.vcxproj.filters
+++ b/GreenHouse_VS/GreenHouse_VS.vcxproj.filters
@@ -21,5 +21,19 @@
     <ClInclude Include="__vm\.GreenHouse_VS.vsarduino.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="JsonRasberry.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SensorData.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="JsonRasberry.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="SensorData.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
